# file-agent

./: .env  .gitignore  Cargo.toml  curl.txt  musl_make
file-agent/: db  snap.00000000000000F0  snap.00000000000023BB
file-agent-db/: db
mydb/: db
src/: main.rs
src/api/: download.rs  mod.rs  request.rs  upload.rs
src/api/domain/: request.rs
src/api/local/: delete.rs  exist.rs  mod.rs
src/api/sftp/: download.rs  mod.rs  task.rs  upload.rs
src/appstate/: appstate.rs
src/config/: config.rs
src/sftp/: client.rs  worker.rs
src/storage/: mod.rs  models.rs  ttl.rs
