[package]
name = "file-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
num_cpus = "1.17.0"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.1"
uuid = { version = "1", features = ["v4"] }  # 使用 UUID v4（随机）
