[package]
name = "file-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
env_logger = "0.11"
log = "0.4"
ssh2 = "0.9"
num_cpus = "1.17.0"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.1"
uuid = { version = "1", features = ["v4"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
async-ssh2-lite= { version = "0.5.0",features = ["tokio"] }
futures-util = "0.3"
dotenvy = "0.15"